<?xml version="1.0"?>
<package format="2">
  <name>pugixml</name>
  <version>1.13.1</version>
  <description>package for xml</description>
  <maintainer email="guillaume.de-mathelin-de-papigny@inria.fr">Guillaume de Mathelin</maintainer>
  <license>MIT</license>

  <author>gdemathelin</author>
  <buildtool_depend>catkin</buildtool_depend>


</package>
